--- a/patterns/01-molecules-02-blocks/index.html
+++ b/patterns/01-molecules-02-blocks/index.html
@@ -10,7 +10,7 @@
 		<link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css" rel="stylesheet"/>
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 
-		<link rel="stylesheet" href="../../css/style.css?1404290945" media="all" />
+		<link rel="stylesheet" href="../../css/style.css?1404295385" media="all" />
 		<!--[if lt IE 9]>
 			<link href="../../ie8.css" rel="stylesheet"/>
 		<![endif]-->
@@ -29,8 +29,8 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		
-		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1404290945" media="all">
-		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1404290945" media="all" />
+		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1404295385" media="all">
+		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1404295385" media="all" />
 		
 
 		<!-- End Pattern Lab -->
@@ -48,21 +48,13 @@
 						<h2 class="sg-pattern-head" ><a href="../../patterns/01-molecules-02-blocks-00-media-block/01-molecules-02-blocks-00-media-block.html" class="patternLink" data-patternpartial="molecules-media-block">Media Block</a></h2>
 						<div class="sg-pattern-body">
 							<div class="block block-thumb">
-	<a href="" class="b-inner">
-		<h2 class="b-title">Lorem ipsum dolor sit (37 characters)</h2>
+	<a href="#" class="b-inner">
 		<div class="b-thumb">
-			<div class="lift-button participation">
-				<div class="count-container">
-					<span class="icon-span icon-comment"></span>
-					<p>17</p>
-				</div>
-				<p class="lift-button-link" href="//www.foo.bar">Miten nyt kerättävä rahoitus tulisi sijoittaa?</p>
-				<p class="date">26.5. asti</p>
-			</div>
+			<img src="../../images/fpo_square.png" alt="Square Thumbnail">
 		</div>
 		<div class="b-text">
-
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			<h3 class="b-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut dui pellentesque, rutrum ipsum eget, congue odio. Aliquam vel euismod se(150 merkkiä)</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id mi pulvinar, scelerisque orci nec, accumsan magna. Fusce vitae imperdiet urna. Etiam quis orci vitae tellus ullamcorper faucibus. Maecenas a sagittis libero. In adipiscing risus a dolor ullamcorper porta. Proin bibendum v(300 merkkiä)</p>
 		</div>
 	</a>
 </div>
@@ -71,21 +63,13 @@
 								<pre class="sg-code-html">
 									<code>
 										&lt;div class=&quot;block block-thumb&quot;&gt;
-	&lt;a href=&quot;&quot; class=&quot;b-inner&quot;&gt;
-		&lt;h2 class=&quot;b-title&quot;&gt;Lorem ipsum dolor sit (37 characters)&lt;/h2&gt;
+	&lt;a href=&quot;#&quot; class=&quot;b-inner&quot;&gt;
 		&lt;div class=&quot;b-thumb&quot;&gt;
-			&lt;div class=&quot;lift-button participation&quot;&gt;
-				&lt;div class=&quot;count-container&quot;&gt;
-					&lt;span class=&quot;icon-span icon-comment&quot;&gt;&lt;/span&gt;
-					&lt;p&gt;17&lt;/p&gt;
-				&lt;/div&gt;
-				&lt;p class=&quot;lift-button-link&quot; href=&quot;//www.foo.bar&quot;&gt;Miten nyt ker&auml;tt&auml;v&auml; rahoitus tulisi sijoittaa?&lt;/p&gt;
-				&lt;p class=&quot;date&quot;&gt;26.5. asti&lt;/p&gt;
-			&lt;/div&gt;
+			&lt;img src=&quot;../../images/fpo_square.png&quot; alt=&quot;Square Thumbnail&quot;&gt;
 		&lt;/div&gt;
 		&lt;div class=&quot;b-text&quot;&gt;
-
-			&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.&lt;/p&gt;
+			&lt;h3 class=&quot;b-title&quot;&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut dui pellentesque, rutrum ipsum eget, congue odio. Aliquam vel euismod se(150 merkki&auml;)&lt;/h3&gt;
+			&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id mi pulvinar, scelerisque orci nec, accumsan magna. Fusce vitae imperdiet urna. Etiam quis orci vitae tellus ullamcorper faucibus. Maecenas a sagittis libero. In adipiscing risus a dolor ullamcorper porta. Proin bibendum v(300 merkki&auml;)&lt;/p&gt;
 		&lt;/div&gt;
 	&lt;/a&gt;
 &lt;/div&gt;
@@ -327,10 +311,10 @@
 			
 		}
 	</script>
-	<script id="pl-js-polyfill-insert-1404290945">
+	<script id="pl-js-polyfill-insert-1404295385">
 		(function() {
 			if (self != top) {
-				var cb = '1404290945';
+				var cb = '1404295385';
 				var js = [];
 				if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 					js.push("styleguide/js/vendor/classlist-polyfill.js");
@@ -339,10 +323,10 @@
 			}
 		})();
 	</script>
-	<script id="pl-js-insert-1404290945">
+	<script id="pl-js-insert-1404295385">
 		(function() {
 			if (self != top) {
-				var cb = '1404290945';
+				var cb = '1404295385';
 				var js = [ { "src": "styleguide/js/vendor/jwerty.js", "dep": [ "styleguide/js/postmessage.js", { "src": "data/annotations.js", "dep": [ "styleguide/js/annotations-pattern.js" ] }, "styleguide/js/code-pattern.js" ] } ];
 				scriptLoader.run(js,cb,'pl-js-insert');
 			}
