--- a/patterns/03-templates-01-blog/03-templates-01-blog.escaped.html
+++ b/patterns/03-templates-01-blog/03-templates-01-blog.escaped.html
@@ -220,97 +220,57 @@
 					&lt;h2 class=&quot;section-title&quot;&gt;Latest Posts&lt;/h2&gt;
 					&lt;ul class=&quot;post-list&quot;&gt;
 						&lt;li&gt;&lt;div class=&quot;block block-thumb&quot;&gt;
-	&lt;a href=&quot;&quot; class=&quot;b-inner&quot;&gt;
-		&lt;h2 class=&quot;b-title&quot;&gt;Lorem ipsum dolor sit (37 characters)&lt;/h2&gt;
+	&lt;a href=&quot;#&quot; class=&quot;b-inner&quot;&gt;
 		&lt;div class=&quot;b-thumb&quot;&gt;
-			&lt;div class=&quot;lift-button participation&quot;&gt;
-				&lt;div class=&quot;count-container&quot;&gt;
-					&lt;span class=&quot;icon-span icon-comment&quot;&gt;&lt;/span&gt;
-					&lt;p&gt;17&lt;/p&gt;
-				&lt;/div&gt;
-				&lt;p class=&quot;lift-button-link&quot; href=&quot;//www.foo.bar&quot;&gt;Miten nyt ker&auml;tt&auml;v&auml; rahoitus tulisi sijoittaa?&lt;/p&gt;
-				&lt;p class=&quot;date&quot;&gt;26.5. asti&lt;/p&gt;
-			&lt;/div&gt;
+			&lt;img src=&quot;../../images/fpo_square.png&quot; alt=&quot;Square Thumbnail&quot;&gt;
 		&lt;/div&gt;
 		&lt;div class=&quot;b-text&quot;&gt;
-
-			&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.&lt;/p&gt;
+			&lt;h3 class=&quot;b-title&quot;&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut dui pellentesque, rutrum ipsum eget, congue odio. Aliquam vel euismod se(150 merkki&auml;)&lt;/h3&gt;
+			&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id mi pulvinar, scelerisque orci nec, accumsan magna. Fusce vitae imperdiet urna. Etiam quis orci vitae tellus ullamcorper faucibus. Maecenas a sagittis libero. In adipiscing risus a dolor ullamcorper porta. Proin bibendum v(300 merkki&auml;)&lt;/p&gt;
 		&lt;/div&gt;
 	&lt;/a&gt;
 &lt;/div&gt;&lt;/li&gt;
 						&lt;li&gt;&lt;div class=&quot;block block-thumb&quot;&gt;
-	&lt;a href=&quot;&quot; class=&quot;b-inner&quot;&gt;
-		&lt;h2 class=&quot;b-title&quot;&gt;Lorem ipsum dolor sit (37 characters)&lt;/h2&gt;
+	&lt;a href=&quot;#&quot; class=&quot;b-inner&quot;&gt;
 		&lt;div class=&quot;b-thumb&quot;&gt;
-			&lt;div class=&quot;lift-button participation&quot;&gt;
-				&lt;div class=&quot;count-container&quot;&gt;
-					&lt;span class=&quot;icon-span icon-comment&quot;&gt;&lt;/span&gt;
-					&lt;p&gt;17&lt;/p&gt;
-				&lt;/div&gt;
-				&lt;p class=&quot;lift-button-link&quot; href=&quot;//www.foo.bar&quot;&gt;Miten nyt ker&auml;tt&auml;v&auml; rahoitus tulisi sijoittaa?&lt;/p&gt;
-				&lt;p class=&quot;date&quot;&gt;26.5. asti&lt;/p&gt;
-			&lt;/div&gt;
+			&lt;img src=&quot;../../images/fpo_square.png&quot; alt=&quot;Square Thumbnail&quot;&gt;
 		&lt;/div&gt;
 		&lt;div class=&quot;b-text&quot;&gt;
-
-			&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.&lt;/p&gt;
+			&lt;h3 class=&quot;b-title&quot;&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut dui pellentesque, rutrum ipsum eget, congue odio. Aliquam vel euismod se(150 merkki&auml;)&lt;/h3&gt;
+			&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id mi pulvinar, scelerisque orci nec, accumsan magna. Fusce vitae imperdiet urna. Etiam quis orci vitae tellus ullamcorper faucibus. Maecenas a sagittis libero. In adipiscing risus a dolor ullamcorper porta. Proin bibendum v(300 merkki&auml;)&lt;/p&gt;
 		&lt;/div&gt;
 	&lt;/a&gt;
 &lt;/div&gt;&lt;/li&gt;
 						&lt;li&gt;&lt;div class=&quot;block block-thumb&quot;&gt;
-	&lt;a href=&quot;&quot; class=&quot;b-inner&quot;&gt;
-		&lt;h2 class=&quot;b-title&quot;&gt;Lorem ipsum dolor sit (37 characters)&lt;/h2&gt;
+	&lt;a href=&quot;#&quot; class=&quot;b-inner&quot;&gt;
 		&lt;div class=&quot;b-thumb&quot;&gt;
-			&lt;div class=&quot;lift-button participation&quot;&gt;
-				&lt;div class=&quot;count-container&quot;&gt;
-					&lt;span class=&quot;icon-span icon-comment&quot;&gt;&lt;/span&gt;
-					&lt;p&gt;17&lt;/p&gt;
-				&lt;/div&gt;
-				&lt;p class=&quot;lift-button-link&quot; href=&quot;//www.foo.bar&quot;&gt;Miten nyt ker&auml;tt&auml;v&auml; rahoitus tulisi sijoittaa?&lt;/p&gt;
-				&lt;p class=&quot;date&quot;&gt;26.5. asti&lt;/p&gt;
-			&lt;/div&gt;
+			&lt;img src=&quot;../../images/fpo_square.png&quot; alt=&quot;Square Thumbnail&quot;&gt;
 		&lt;/div&gt;
 		&lt;div class=&quot;b-text&quot;&gt;
-
-			&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.&lt;/p&gt;
+			&lt;h3 class=&quot;b-title&quot;&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut dui pellentesque, rutrum ipsum eget, congue odio. Aliquam vel euismod se(150 merkki&auml;)&lt;/h3&gt;
+			&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id mi pulvinar, scelerisque orci nec, accumsan magna. Fusce vitae imperdiet urna. Etiam quis orci vitae tellus ullamcorper faucibus. Maecenas a sagittis libero. In adipiscing risus a dolor ullamcorper porta. Proin bibendum v(300 merkki&auml;)&lt;/p&gt;
 		&lt;/div&gt;
 	&lt;/a&gt;
 &lt;/div&gt;&lt;/li&gt;
 						&lt;li&gt;&lt;div class=&quot;block block-thumb&quot;&gt;
-	&lt;a href=&quot;&quot; class=&quot;b-inner&quot;&gt;
-		&lt;h2 class=&quot;b-title&quot;&gt;Lorem ipsum dolor sit (37 characters)&lt;/h2&gt;
+	&lt;a href=&quot;#&quot; class=&quot;b-inner&quot;&gt;
 		&lt;div class=&quot;b-thumb&quot;&gt;
-			&lt;div class=&quot;lift-button participation&quot;&gt;
-				&lt;div class=&quot;count-container&quot;&gt;
-					&lt;span class=&quot;icon-span icon-comment&quot;&gt;&lt;/span&gt;
-					&lt;p&gt;17&lt;/p&gt;
-				&lt;/div&gt;
-				&lt;p class=&quot;lift-button-link&quot; href=&quot;//www.foo.bar&quot;&gt;Miten nyt ker&auml;tt&auml;v&auml; rahoitus tulisi sijoittaa?&lt;/p&gt;
-				&lt;p class=&quot;date&quot;&gt;26.5. asti&lt;/p&gt;
-			&lt;/div&gt;
+			&lt;img src=&quot;../../images/fpo_square.png&quot; alt=&quot;Square Thumbnail&quot;&gt;
 		&lt;/div&gt;
 		&lt;div class=&quot;b-text&quot;&gt;
-
-			&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.&lt;/p&gt;
+			&lt;h3 class=&quot;b-title&quot;&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut dui pellentesque, rutrum ipsum eget, congue odio. Aliquam vel euismod se(150 merkki&auml;)&lt;/h3&gt;
+			&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id mi pulvinar, scelerisque orci nec, accumsan magna. Fusce vitae imperdiet urna. Etiam quis orci vitae tellus ullamcorper faucibus. Maecenas a sagittis libero. In adipiscing risus a dolor ullamcorper porta. Proin bibendum v(300 merkki&auml;)&lt;/p&gt;
 		&lt;/div&gt;
 	&lt;/a&gt;
 &lt;/div&gt;&lt;/li&gt;
 						&lt;li&gt;&lt;div class=&quot;block block-thumb&quot;&gt;
-	&lt;a href=&quot;&quot; class=&quot;b-inner&quot;&gt;
-		&lt;h2 class=&quot;b-title&quot;&gt;Lorem ipsum dolor sit (37 characters)&lt;/h2&gt;
+	&lt;a href=&quot;#&quot; class=&quot;b-inner&quot;&gt;
 		&lt;div class=&quot;b-thumb&quot;&gt;
-			&lt;div class=&quot;lift-button participation&quot;&gt;
-				&lt;div class=&quot;count-container&quot;&gt;
-					&lt;span class=&quot;icon-span icon-comment&quot;&gt;&lt;/span&gt;
-					&lt;p&gt;17&lt;/p&gt;
-				&lt;/div&gt;
-				&lt;p class=&quot;lift-button-link&quot; href=&quot;//www.foo.bar&quot;&gt;Miten nyt ker&auml;tt&auml;v&auml; rahoitus tulisi sijoittaa?&lt;/p&gt;
-				&lt;p class=&quot;date&quot;&gt;26.5. asti&lt;/p&gt;
-			&lt;/div&gt;
+			&lt;img src=&quot;../../images/fpo_square.png&quot; alt=&quot;Square Thumbnail&quot;&gt;
 		&lt;/div&gt;
 		&lt;div class=&quot;b-text&quot;&gt;
-
-			&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.&lt;/p&gt;
+			&lt;h3 class=&quot;b-title&quot;&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut dui pellentesque, rutrum ipsum eget, congue odio. Aliquam vel euismod se(150 merkki&auml;)&lt;/h3&gt;
+			&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id mi pulvinar, scelerisque orci nec, accumsan magna. Fusce vitae imperdiet urna. Etiam quis orci vitae tellus ullamcorper faucibus. Maecenas a sagittis libero. In adipiscing risus a dolor ullamcorper porta. Proin bibendum v(300 merkki&auml;)&lt;/p&gt;
 		&lt;/div&gt;
 	&lt;/a&gt;
 &lt;/div&gt;&lt;/li&gt;
