--- a/patterns/01-molecules-07-messaging-00-warning/01-molecules-07-messaging-00-warning.escaped.html
+++ b/patterns/01-molecules-07-messaging-00-warning/01-molecules-07-messaging-00-warning.escaped.html
@@ -2,6 +2,6 @@
 &lt;div class=&quot;msg-warning toast-container&quot;&gt;
 	&lt;p&gt;Try toaster message by clicking the button below this message&lt;/p&gt;
 
-	&lt;div class=&quot;msg-toast is-hidden&quot;&gt; &lt;i class=&quot;icon-lbulb toast-icon&quot;&gt;&lt;/i&gt;&lt;p&gt;I'm the hidden warning message&lt;/p&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/div&gt;
+	&lt;div class=&quot;msg-toast is-hidden&quot;&gt; &lt;i class=&quot;om-exclamation_circle toast-icon&quot;&gt;&lt;/i&gt;&lt;p&gt;I'm the hidden warning message&lt;/p&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/div&gt;
 	&lt;button id=&quot;warning&quot; class=&quot;toast-trigger warning&quot;&gt;Button&lt;/button&gt;
 &lt;/div&gt;
