--- a/patterns/01-molecules-07-messaging/index.html
+++ b/patterns/01-molecules-07-messaging/index.html
@@ -10,7 +10,7 @@
 		<link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css" rel="stylesheet"/>
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 
-		<link rel="stylesheet" href="../../css/style.css?1404314299" media="all" />
+		<link rel="stylesheet" href="../../css/style.css?1404314835" media="all" />
 		<!--[if lt IE 9]>
 			<link href="../../ie8.css" rel="stylesheet"/>
 		<![endif]-->
@@ -29,8 +29,8 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		
-		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1404314299" media="all">
-		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1404314299" media="all" />
+		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1404314835" media="all">
+		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1404314835" media="all" />
 		
 
 		<!-- End Pattern Lab -->
@@ -51,7 +51,7 @@
 <div class="msg-warning toast-container">
 	<p>Try toaster message by clicking the button below this message</p>
 
-	<div class="msg-toast is-hidden"> <i class="icon-lbulb toast-icon"></i><p>I'm the hidden warning message</p><i class="icon-close"></i></div>
+	<div class="msg-toast is-hidden"> <i class="om-exclamation_circle toast-icon"></i><p>I'm the hidden warning message</p><i class="icon-close"></i></div>
 	<button id="warning" class="toast-trigger warning">Button</button>
 </div>
 
@@ -63,7 +63,7 @@
 &lt;div class=&quot;msg-warning toast-container&quot;&gt;
 	&lt;p&gt;Try toaster message by clicking the button below this message&lt;/p&gt;
 
-	&lt;div class=&quot;msg-toast is-hidden&quot;&gt; &lt;i class=&quot;icon-lbulb toast-icon&quot;&gt;&lt;/i&gt;&lt;p&gt;I'm the hidden warning message&lt;/p&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/div&gt;
+	&lt;div class=&quot;msg-toast is-hidden&quot;&gt; &lt;i class=&quot;om-exclamation_circle toast-icon&quot;&gt;&lt;/i&gt;&lt;p&gt;I'm the hidden warning message&lt;/p&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/div&gt;
 	&lt;button id=&quot;warning&quot; class=&quot;toast-trigger warning&quot;&gt;Button&lt;/button&gt;
 &lt;/div&gt;
 
@@ -79,7 +79,7 @@
 <div class="msg-info toast-container">
 	<p>Try toaster message by clicking the button below this message</p>
 
-	<div class="msg-toast is-hidden"> <i class="icon-info toast-icon"></i><p>I'm the hidden info message</p><i class="icon-close"></i></div>
+	<div class="msg-toast is-hidden"> <i class="om-info_circle toast-icon"></i><p>I'm the hidden info message</p><i class="icon-close"></i></div>
 	<button id="info" class="toast-trigger info">Button</button>
 </div>
 
@@ -91,7 +91,7 @@
 &lt;div class=&quot;msg-info toast-container&quot;&gt;
 	&lt;p&gt;Try toaster message by clicking the button below this message&lt;/p&gt;
 
-	&lt;div class=&quot;msg-toast is-hidden&quot;&gt; &lt;i class=&quot;icon-info toast-icon&quot;&gt;&lt;/i&gt;&lt;p&gt;I'm the hidden info message&lt;/p&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/div&gt;
+	&lt;div class=&quot;msg-toast is-hidden&quot;&gt; &lt;i class=&quot;om-info_circle toast-icon&quot;&gt;&lt;/i&gt;&lt;p&gt;I'm the hidden info message&lt;/p&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/div&gt;
 	&lt;button id=&quot;info&quot; class=&quot;toast-trigger info&quot;&gt;Button&lt;/button&gt;
 &lt;/div&gt;
 
@@ -211,10 +211,10 @@
 			
 		}
 	</script>
-	<script id="pl-js-polyfill-insert-1404314299">
+	<script id="pl-js-polyfill-insert-1404314835">
 		(function() {
 			if (self != top) {
-				var cb = '1404314299';
+				var cb = '1404314835';
 				var js = [];
 				if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 					js.push("styleguide/js/vendor/classlist-polyfill.js");
@@ -223,10 +223,10 @@
 			}
 		})();
 	</script>
-	<script id="pl-js-insert-1404314299">
+	<script id="pl-js-insert-1404314835">
 		(function() {
 			if (self != top) {
-				var cb = '1404314299';
+				var cb = '1404314835';
 				var js = [ { "src": "styleguide/js/vendor/jwerty.js", "dep": [ "styleguide/js/postmessage.js", { "src": "data/annotations.js", "dep": [ "styleguide/js/annotations-pattern.js" ] }, "styleguide/js/code-pattern.js" ] } ];
 				scriptLoader.run(js,cb,'pl-js-insert');
 			}
